// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OE - Spinner renders correctly 1`] = `
<jest>
  <div
    class="spinner-border text-danger"
    role="status"
  >
    <span
      class="visually-hidden"
    >
      Loading...
    </span>
  </div>
</jest>
`;

exports[`OE - Spinner renders grow correctly 1`] = `
<jest>
  <div
    class="spinner-grow text-danger"
    role="status"
  >
    <span
      class="visually-hidden"
    >
      Loading...
    </span>
  </div>
</jest>
`;

exports[`OE - Spinner renders small correctly 1`] = `
<jest>
  <div
    class="spinner-border spinner-border-sm text-danger"
    role="status"
  >
    <span
      class="visually-hidden"
    >
      Loading...
    </span>
  </div>
</jest>
`;
